# sheo

./: README.md  sheo.cabal
app/: Main.hs
src/Language/Sheo/: Parser.hs  Printer.hs  Types.hs
src/Language/Sheo/Rewrite/: EnStream.hs  Rewrite.hs
