name:                sheo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/forestbelton/sheo#readme
license:             BSD3
license-file:        LICENSE
author:              Forest Belton
maintainer:          forest@homolo.gy
copyright:           2017 Forest Belton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Sheo.Types
                     , Language.Sheo.Printer
                     , Language.Sheo.Parser
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers >= 0.2.8.0 && < 0.3
                     , trifecta >= 1.6.2.1 && < 1.7
                     , parsers >= 0.12.4 && < 0.13
                     , ansi-wl-pprint >= 0.6.7.3 && < 0.7
  default-language:    Haskell2010

executable sheo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sheo
                     , optparse-applicative >= 0.13.2.0 && < 0.14
  default-language:    Haskell2010

test-suite sheo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sheo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/forestbelton/sheo
